--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
 	<meta charset="UTF-8">
-	<title>Get in the Box</title>
+	<title>Chicken Chase</title>
 	<link rel="stylesheet" href="style.css">
 	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
 	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
@@ -10,104 +10,55 @@
 	<script src="jquery.ui.touch-punch.min.js"></script>
 	<script src="main.js"></script>
 	<script type="text/javascript" src="moveobj.js"> </script>
-	<script type="text/javascript">
-
-/***********************************************
-* Floating image script- By Virtual_Max (http://www.geocities.com/siliconvalley/lakes/8620)
-* Modified by Dynamic Drive for various improvements
-* Visit Dynamic Drive at http://www.dynamicdrive.com/ for full source code
-***********************************************/
-
-//Step 1: Define unique variable names depending on number of flying images (ie:3):
-var flyimage1, flyimage2, flyimage3
-
-function pagestart(){
-//Step 2: Using the same variable names as 1), add or delete more of the below lines (60=width, height=80 of image):
-flyimage1=new Chip("flyimage1",47,68);
-flyimage2=new Chip("flyimage2",47,68);
-flyimage3=new Chip("flyimage3",47,68);
-flyimage4=new Chip("flyimage4",47,68);
-flyimage5=new Chip("flyimage5",47,68);
-flyimage6=new Chip("flyimage6",47,68);
-flyimage7=new Chip("flyimage7",47,68);
-flyimage8=new Chip("flyimage8",47,68);
-flyimage9=new Chip("flyimage9",47,68);
-flyimage10=new Chip("flyimage10",47,68);
-flyimage11=new Chip("flyimage11",47,68);
-flyimage12=new Chip("flyimage12",47,68);
-
-//Step 3: Using the same variable names as 1), add or delete more of the below lines:
-movechip("flyimage1");
-movechip("flyimage2");
-movechip("flyimage3");
-movechip("flyimage4");
-movechip("flyimage5");
-movechip("flyimage6");
-movechip("flyimage7");
-movechip("flyimage8");
-movechip("flyimage9");
-movechip("flyimage10");
-movechip("flyimage11");
-movechip("flyimage12");
-}
-
-if (window.addEventListener)
-	window.addEventListener("load", pagestart, false)
-else if (window.attachEvent)
-	window.attachEvent("onload", pagestart)
-else if (document.getElementById)
-	window.onload=pagestart
-
-</script>
 </head>
 <body>
-
+<div id="result"></div>
 	<div ID="flyimage1" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken" SRC="chicken.png">
 	</div>
 
 	<div ID="flyimage2" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken1" SRC="chicken1.png">
 	</div>
 
 	<div ID="flyimage3" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken2" SRC="chicken2.png">
 	</div>
 
 	<div ID="flyimage4" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken3" SRC="chicken3.png">
 	</div>
 
 	<div ID="flyimage5" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken4" SRC="chicken4.png">
 	</div>
 
 	<div ID="flyimage6" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken5" SRC="chicken5.png">
 	</div>
 
 	<div ID="flyimage7" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken6" SRC="chicken6.png">
 	</div>
 
 	<div ID="flyimage8" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken7" SRC="chicken7.png">
 	</div>
 
 	<div ID="flyimage9" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken8" SRC="chicken8.png">
 	</div>
 
 	<div ID="flyimage10" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken9" SRC="chicken9.png">
 	</div>
 
 	<div ID="flyimage11" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken10" SRC="chicken10.png">
 	</div>
 
 	<div ID="flyimage12" STYLE="position:absolute; left: -500px; width:47; height:68;">
-		<img class="animal" SRC="chicken.png">
+		<img class="animal" id="chicken11" SRC="chicken11.png">
 	</div>
 
 	<div class="chicken-coop">Chicken Coop</div>
